pkg/interface/lib/opt/lex_n_yacc/pat_file.output
Grammar

    0 $accept: start $end

    1 start: initialize header pattern_type pattern_num patterns

    2 initialize: /* empty */

    3 header: names '|' names '|' names
    4       | names '|' '|' names

    5 pattern_type: PATTERN_TYPE

    6 pattern_num: PATTERN_NUM

    7 patterns: patterns pattern
    8         | /* empty */

    9 names: names NAME
   10      | NAME

   11 pattern: PATTERN nameq '|' nameq '|' nameq '|' nameq '|' nameq '|' nameq '|' nameq

   12 nameq: NAME
   13      | /* empty */


Terminals, with rules where they appear

$end (0) 0
'|' (124) 3 4 11
error (256)
PATTERN (258) 11
NAME (259) 9 10 12
PATTERN_NUM (260) 6
PATTERN_TYPE (261) 5


Nonterminals, with rules where they appear

$accept (8)
    on left: 0
start (9)
    on left: 1, on right: 0
initialize (10)
    on left: 2, on right: 1
header (11)
    on left: 3 4, on right: 1
pattern_type (12)
    on left: 5, on right: 1
pattern_num (13)
    on left: 6, on right: 1
patterns (14)
    on left: 7 8, on right: 1 7
names (15)
    on left: 9 10, on right: 3 4 9
pattern (16)
    on left: 11, on right: 7
nameq (17)
    on left: 12 13, on right: 11


state 0

    0 $accept: . start $end

    $default  reduce using rule 2 (initialize)

    start       go to state 1
    initialize  go to state 2


state 1

    0 $accept: start . $end

    $end  shift, and go to state 3


state 2

    1 start: initialize . header pattern_type pattern_num patterns

    NAME  shift, and go to state 4

    header  go to state 5
    names   go to state 6


state 3

    0 $accept: start $end .

    $default  accept


state 4

   10 names: NAME .

    $default  reduce using rule 10 (names)


state 5

    1 start: initialize header . pattern_type pattern_num patterns

    PATTERN_TYPE  shift, and go to state 7

    pattern_type  go to state 8


state 6

    3 header: names . '|' names '|' names
    4       | names . '|' '|' names
    9 names: names . NAME

    NAME  shift, and go to state 9
    '|'   shift, and go to state 10


state 7

    5 pattern_type: PATTERN_TYPE .

    $default  reduce using rule 5 (pattern_type)


state 8

    1 start: initialize header pattern_type . pattern_num patterns

    PATTERN_NUM  shift, and go to state 11

    pattern_num  go to state 12


state 9

    9 names: names NAME .

    $default  reduce using rule 9 (names)


state 10

    3 header: names '|' . names '|' names
    4       | names '|' . '|' names

    NAME  shift, and go to state 4
    '|'   shift, and go to state 13

    names  go to state 14


state 11

    6 pattern_num: PATTERN_NUM .

    $default  reduce using rule 6 (pattern_num)


state 12

    1 start: initialize header pattern_type pattern_num . patterns

    $default  reduce using rule 8 (patterns)

    patterns  go to state 15


state 13

    4 header: names '|' '|' . names

    NAME  shift, and go to state 4

    names  go to state 16


state 14

    3 header: names '|' names . '|' names
    9 names: names . NAME

    NAME  shift, and go to state 9
    '|'   shift, and go to state 17


state 15

    1 start: initialize header pattern_type pattern_num patterns .
    7 patterns: patterns . pattern

    PATTERN  shift, and go to state 18

    $default  reduce using rule 1 (start)

    pattern  go to state 19


state 16

    4 header: names '|' '|' names .
    9 names: names . NAME

    NAME  shift, and go to state 9

    $default  reduce using rule 4 (header)


state 17

    3 header: names '|' names '|' . names

    NAME  shift, and go to state 4

    names  go to state 20


state 18

   11 pattern: PATTERN . nameq '|' nameq '|' nameq '|' nameq '|' nameq '|' nameq '|' nameq

    NAME  shift, and go to state 21

    $default  reduce using rule 13 (nameq)

    nameq  go to state 22


state 19

    7 patterns: patterns pattern .

    $default  reduce using rule 7 (patterns)


state 20

    3 header: names '|' names '|' names .
    9 names: names . NAME

    NAME  shift, and go to state 9

    $default  reduce using rule 3 (header)


state 21

   12 nameq: NAME .

    $default  reduce using rule 12 (nameq)


state 22

   11 pattern: PATTERN nameq . '|' nameq '|' nameq '|' nameq '|' nameq '|' nameq '|' nameq

    '|'  shift, and go to state 23


state 23

   11 pattern: PATTERN nameq '|' . nameq '|' nameq '|' nameq '|' nameq '|' nameq '|' nameq

    NAME  shift, and go to state 21

    $default  reduce using rule 13 (nameq)

    nameq  go to state 24


state 24

   11 pattern: PATTERN nameq '|' nameq . '|' nameq '|' nameq '|' nameq '|' nameq '|' nameq

    '|'  shift, and go to state 25


state 25

   11 pattern: PATTERN nameq '|' nameq '|' . nameq '|' nameq '|' nameq '|' nameq '|' nameq

    NAME  shift, and go to state 21

    $default  reduce using rule 13 (nameq)

    nameq  go to state 26


state 26

   11 pattern: PATTERN nameq '|' nameq '|' nameq . '|' nameq '|' nameq '|' nameq '|' nameq

    '|'  shift, and go to state 27


state 27

   11 pattern: PATTERN nameq '|' nameq '|' nameq '|' . nameq '|' nameq '|' nameq '|' nameq

    NAME  shift, and go to state 21

    $default  reduce using rule 13 (nameq)

    nameq  go to state 28


state 28

   11 pattern: PATTERN nameq '|' nameq '|' nameq '|' nameq . '|' nameq '|' nameq '|' nameq

    '|'  shift, and go to state 29


state 29

   11 pattern: PATTERN nameq '|' nameq '|' nameq '|' nameq '|' . nameq '|' nameq '|' nameq

    NAME  shift, and go to state 21

    $default  reduce using rule 13 (nameq)

    nameq  go to state 30


state 30

   11 pattern: PATTERN nameq '|' nameq '|' nameq '|' nameq '|' nameq . '|' nameq '|' nameq

    '|'  shift, and go to state 31


state 31

   11 pattern: PATTERN nameq '|' nameq '|' nameq '|' nameq '|' nameq '|' . nameq '|' nameq

    NAME  shift, and go to state 21

    $default  reduce using rule 13 (nameq)

    nameq  go to state 32


state 32

   11 pattern: PATTERN nameq '|' nameq '|' nameq '|' nameq '|' nameq '|' nameq . '|' nameq

    '|'  shift, and go to state 33


state 33

   11 pattern: PATTERN nameq '|' nameq '|' nameq '|' nameq '|' nameq '|' nameq '|' . nameq

    NAME  shift, and go to state 21

    $default  reduce using rule 13 (nameq)

    nameq  go to state 34


state 34

   11 pattern: PATTERN nameq '|' nameq '|' nameq '|' nameq '|' nameq '|' nameq '|' nameq .

    $default  reduce using rule 11 (pattern)
